# Messenger

./: .hgignore  AUTHORS  COPYING  INSTALL  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac
src/: Makefile.am  Makefile.in  Messenger.idl  Messenger.mpc  datareader_listener_impl.cpp  datareader_listener_impl.h  main.cpp  publisher.cpp  subscriber.cpp
