#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Messenger], [0.0.1], [neblocke@objectcomputing.com])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])

AC_OUTPUT(Makefile src/Makefile)
# Checks for programs.
AC_PROG_CXX


AC_PROG_INSTALL

AC_CONFIG_MACRO_DIRS([m4])

# Checks for libraries.

# Checks for header files.
AX_CXX_COMPILE_STDCXX_11([ext],[mandatory])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
